# landing-optimizer-ai

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  analyzer.py  auth.py  config.py  main.py  schemas.py
app/providers/: base.py  openai_provider.py  stub.py
app/routers/: internal.py
tests/: test_stub_provider.py
