[project]
name = "landing-optimizer-ai"
version = "0.1.0"
description = "Landing Optimizer AI service — CRO suggestion generation with an LLM provider abstraction."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
